{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 16,
  "lineage": "082a84b3-2f30-461e-1bf7-b1e8863cd871",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terrajens_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0db051b067fcfdb",
            "arn": "arn:aws:ec2:us-east-1:905418407602:elastic-ip/eipalloc-0b0db051b067fcfdb",
            "domain": "vpc",
            "id": "eipalloc-0b0db051b067fcfdb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-28-104-91.compute-1.amazonaws.com",
            "public_ip": "100.28.104.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terrajens_natgw_eip"
            },
            "tags_all": {
              "Name": "terrajens_natgw_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terrajens_priv_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:905418407602:instance/i-0763c7b78c0937990",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0763c7b78c0937990",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04537a3116ee96a4b",
            "private_dns": "ip-150-0-2-106.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "150.0.2.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ab72ff955a90b9a9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d3575267085a0d75"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0630c6b09f691149f",
            "tags": {
              "Name": "terrajens_priv_inst"
            },
            "tags_all": {
              "Name": "terrajens_priv_inst"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d3575267085a0d75"
            ]
          },
          "dependencies": [
            "aws_security_group.terrajens_sg",
            "aws_subnet.test_private_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terrajens_pub_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:905418407602:instance/i-0b31a38ccd2c3bc72",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b31a38ccd2c3bc72",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06ba2a78b64cadf8a",
            "private_dns": "ip-150-0-1-201.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "150.0.1.201",
            "public_ip": "18.205.162.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-091233462334b75bd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d3575267085a0d75"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084075a094ff67c5b",
            "tags": {
              "Name": "terrajens_pub_inst"
            },
            "tags_all": {
              "Name": "terrajens_pub_inst"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d3575267085a0d75"
            ]
          },
          "dependencies": [
            "aws_security_group.terrajens_sg",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terrajens_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418407602:internet-gateway/igw-000c5a91e1d50a443",
            "id": "igw-000c5a91e1d50a443",
            "owner_id": "905418407602",
            "tags": {
              "Name": "terrajens_igw"
            },
            "tags_all": {
              "Name": "terrajens_igw"
            },
            "vpc_id": "vpc-0bc487cdc7f714236"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terrajens_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0db051b067fcfdb",
            "association_id": "eipassoc-08130b535d2ad9fd1",
            "connectivity_type": "public",
            "id": "nat-0423f965f9796d8bd",
            "network_interface_id": "eni-0328e36e088dcfcdc",
            "private_ip": "150.0.1.97",
            "public_ip": "100.28.104.91",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-084075a094ff67c5b",
            "tags": {
              "Name": "terrajens_natgw"
            },
            "tags_all": {
              "Name": "terrajens_natgw"
            }
          },
          "dependencies": [
            "aws_eip.terrajens_eip",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "terrajens_priv_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418407602:network-acl/acl-0ec93687b9dc41fde",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "all",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-0ec93687b9dc41fde",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "150.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "all",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "905418407602",
            "subnet_ids": [],
            "tags": {
              "Name": "jerrajens_priv_nacl"
            },
            "tags_all": {
              "Name": "jerrajens_priv_nacl"
            },
            "vpc_id": "vpc-0bc487cdc7f714236"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "terrajens_pub_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418407602:network-acl/acl-009dc53cecf54dc21",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-009dc53cecf54dc21",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 8080,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 8080
              }
            ],
            "owner_id": "905418407602",
            "subnet_ids": [],
            "tags": {
              "Name": "terrajens_pub_nacl"
            },
            "tags_all": {
              "Name": "terrajens_pub_nacl"
            },
            "vpc_id": "vpc-0bc487cdc7f714236"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418407602:route-table/rtb-048b9c00800295405",
            "id": "rtb-048b9c00800295405",
            "owner_id": "905418407602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0423f965f9796d8bd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "priv_rt"
            },
            "tags_all": {
              "Name": "priv_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc487cdc7f714236"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terrajens_eip",
            "aws_nat_gateway.terrajens_natgw",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418407602:route-table/rtb-0f134ad2cb5a78659",
            "id": "rtb-0f134ad2cb5a78659",
            "owner_id": "905418407602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000c5a91e1d50a443",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc487cdc7f714236"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terrajens_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terrajens_priv_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa3c25c1c1235018",
            "route_table_id": "rtb-048b9c00800295405",
            "subnet_id": "subnet-0630c6b09f691149f"
          },
          "dependencies": [
            "aws_eip.terrajens_eip",
            "aws_nat_gateway.terrajens_natgw",
            "aws_route_table.priv_rt",
            "aws_subnet.test_private_subnet",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terrajens_pub_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039091fd44d5e2057",
            "route_table_id": "rtb-0f134ad2cb5a78659",
            "subnet_id": "subnet-084075a094ff67c5b"
          },
          "dependencies": [
            "aws_internet_gateway.terrajens_igw",
            "aws_route_table.public_rt",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terrajens_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418407602:security-group/sg-0d3575267085a0d75",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3575267085a0d75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20240805204308637500000003",
            "name_prefix": "terraform-",
            "owner_id": "905418407602",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terrajens_sg"
            },
            "tags_all": {
              "Name": "terrajens_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc487cdc7f714236"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418407602:subnet/subnet-0630c6b09f691149f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "150.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0630c6b09f691149f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418407602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test_private"
            },
            "tags_all": {
              "Name": "test_private"
            },
            "vpc_id": "vpc-0bc487cdc7f714236"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418407602:subnet/subnet-084075a094ff67c5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "150.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084075a094ff67c5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418407602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test_public_subnet"
            },
            "tags_all": {
              "Name": "test_public_subnet"
            },
            "vpc_id": "vpc-0bc487cdc7f714236"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418407602:vpc/vpc-0bc487cdc7f714236",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "150.0.0.0/16",
            "default_network_acl_id": "acl-0c13562c5970a5138",
            "default_route_table_id": "rtb-04168a989d1143b59",
            "default_security_group_id": "sg-0fa9a1d771e4e5b56",
            "dhcp_options_id": "dopt-054209c3cd77ddddd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc487cdc7f714236",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04168a989d1143b59",
            "owner_id": "905418407602",
            "tags": {
              "Name": "test_vpc"
            },
            "tags_all": {
              "Name": "test_vpc"
            }
          }
        }
      ]
    }
  ]
}